# LocalNZBs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: docker.yml
nzbserver/: app.py  index.py  newznab.py  parser.py  web.py
nzbserver/templates/: base.html  detail.html  list.html  login.html  stats.html
